--- a/src/app/components/website-footer-menu/website-footer-menu.component.css
+++ b/src/app/components/website-footer-menu/website-footer-menu.component.css
@@ -151,6 +151,7 @@
 
 
 /* Links */
+
 .tas-footer-heading {
   font-size: 18px;
   font-weight: bold;
@@ -162,7 +163,12 @@
   list-style: none;
   padding: 0;
   margin: 0;
+  display: grid;
+  grid-template-columns: repeat(2, minmax(120px, 1fr));
+  gap: 10px 30px;
+  justify-items: left;
 }
+
 
 .tas-footer-nav li {
   margin-bottom: 10px;
