--- a/src/app/components/website-footer-menu/website-footer-menu.component.html
+++ b/src/app/components/website-footer-menu/website-footer-menu.component.html
@@ -4,16 +4,18 @@
       <!-- <div class="icon address-icon"></div> -->
       <!-- Company Links -->
     <div class="tas-footer-section tas-footer-links">
-      <h4 class="tas-footer-heading">LINKS</h4>
-      <ul class="tas-footer-nav">
-        <li><a href="">Home</a></li>
-        <li><a href="/about-us">About us</a></li>
-        <li><a href="/services/services-overview">Our services</a></li>
-        <li><a href="/products/products-overview">Products</a></li>
-        <li><a href="/faq">FAQs</a></li>
-        <li><a href="/contact-us">Contact Us</a></li>
-      </ul>
-    </div>
+  <h4 class="tas-footer-heading">LINKS</h4>
+  <ul class="tas-footer-nav">
+    <li><a href="">Home</a></li>
+    <li><a href="/about-us">About us</a></li>
+    <li><a href="/services/services-overview">Our services</a></li>
+    <li><a href="/products/products-overview">Products</a></li>
+    <li><a href="/faq">FAQs</a></li>
+    <li><a href="/contact-us">Contact Us</a></li>
+    <li><a href="/academy-overview">Academy</a></li>
+    <li><a href="/blog">Blog</a></li>
+  </ul>
+</div>
     </div>
 
     <div class="contact-item">
