--- a/src/app/components/website-head-menu/website-head-menu.component.css
+++ b/src/app/components/website-head-menu/website-head-menu.component.css
@@ -69,3 +69,12 @@
   cursor: pointer;
   border-radius: 4px;
 }
+
+.academy {
+  background-color: red;
+  border: none;
+  padding: 8px 16px;
+  cursor: pointer;
+  border-radius: 4px;
+  color: #fff;
+}
