--- a/src/app/components/website-head-menu/website-head-menu.component.html
+++ b/src/app/components/website-head-menu/website-head-menu.component.html
@@ -13,8 +13,12 @@
     <a [routerLink]="['/services/services-overview']">Services</a>
     <a [routerLink]="['/products/products-overview']">Products</a>
     <a [routerLink]="['/contact-us']" routerLinkActive="router-link-active"
-      >Contact us</a
-    >
+      >Contact us</a>
+    <a [routerLink]="['/blog']" routerLinkActive="router-link-active"
+      >Blog</a>
+      <button type="button" class="academy" [routerLink]="['/academy-overview']">
+      Academy
+    </button>
     <button type="button" class="signin" [routerLink]="['/login']" *ngIf="!isLoggedIn">
       Sign In
     </button>
