--- a/src/app/modules/services/services-overview/services-overview.component.css
+++ b/src/app/modules/services/services-overview/services-overview.component.css
@@ -104,7 +104,7 @@
   padding: 40px 1%;
   flex-wrap: wrap;
   gap: 40px;
-  background-color: #f7f7f7;
+  background-color: #FFcccc;
 }
 
 .services.reverse {
