--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -656,7 +656,7 @@ hr {
   text-align: center;
   padding: 60px 20px;
   font-family: 'Segoe UI', sans-serif;
-  background-color: #ffcccc;
+  background-color: #001f3f;
   margin-top: -380px;
 }
 
@@ -664,12 +664,12 @@ hr {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 10px;
-  color: #d9002c;
+  color: #ffffff;
 }
 
 .consulting-subtitle {
   font-size: 1.1rem;
-  color: #000;
+  color: #DAA520;
   margin-bottom: 40px;
 }
 
