--- a/src/app/components/about-us/about-us.component.html
+++ b/src/app/components/about-us/about-us.component.html
@@ -134,7 +134,7 @@
      <div class="omnipurse-vision-overlay">
     <h2>Our Vision.</h2>
     <p>
-      To empower individuals, organizations, and businesses with innovative solutions that drive success.
+      To help individuals, organizations, and businesses thrive in a digital age.
     </p>
   </div>
   <img src="assets/iMG/Our-Vision1.jpg" alt="Mission Target Image" class="omnipurse-vision-background" />
