--- a/src/app/modules/academy/omnipurse-academy/omnipurse-academy.component.css
+++ b/src/app/modules/academy/omnipurse-academy/omnipurse-academy.component.css
@@ -663,7 +663,7 @@ h1 .highlight {
 
 /* footer */
 .footer {
-  background: url("../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
+  background: url("../../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
   center/cover no-repeat;
 }
 
