--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -194,7 +194,7 @@ h1 {
 }
 
 .about-section {
-  background: url("../../../assets/iMG/pexels-luis-gomes-166706-546819.jpg")
+  background: url("../../../assets/Home-IMG/business-growth1.jpg")
     center/cover no-repeat;
   position: relative;
   padding: 80px 20px;
@@ -219,7 +219,7 @@ h1 {
   z-index: 1;
   max-width: 550px;
   margin-left: 5%;
-  background-color: rgba(255, 255, 255, 0.05);
+  background-color: rgba(0, 0, 64, 0.6);
   padding: 50px 10px 80px;
   border-radius: 10px;
   align-items: left;
@@ -409,7 +409,7 @@ hr {
 }
 
 .start-journey {
-  background: url("../../../assets/iMG/pexels-danny-meneses-340146-943096.jpg")
+  background: url("../../../assets/Home-IMG/build-software-product2.jpg")
     center/cover no-repeat;
   position: relative;
   padding: 80px 20px;
@@ -461,8 +461,8 @@ hr {
   z-index: 1;
   margin-right: 300px; /* align with .about-content */
   margin-top: -10px;
-  background: goldenrod;
-  color: white;
+  background: #DAA520;
+  color: #000;
   padding: 12px 24px;
   border: 1px solid #001f3f;
   font-size: 1rem;
@@ -664,12 +664,12 @@ hr {
   font-size: 2rem;
   font-weight: 600;
   margin-bottom: 10px;
-  color: #ffffff;
+  color: #DAA520;
 }
 
 .consulting-subtitle {
   font-size: 1.1rem;
-  color: #DAA520;
+  color: #ffffff;
   margin-bottom: 40px;
 }
 
