--- a/src/app/modules/academy/omnipurse-internships/omnipurse-internships.component.css
+++ b/src/app/modules/academy/omnipurse-internships/omnipurse-internships.component.css
@@ -382,7 +382,7 @@ button:hover {
 
 /* footer */
 .footer {
-  background: url("../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
+  background: url("../../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
   center/cover no-repeat;
 }
 
