--- a/src/app/modules/academy/omnipurse-trainings/omnipurse-trainings.component.css
+++ b/src/app/modules/academy/omnipurse-trainings/omnipurse-trainings.component.css
@@ -356,7 +356,7 @@
 
 /* footer */
 .footer {
-  background: url("../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
+  background: url("../../../../assets/iMG/pexels-kevin-ku-92347-577585.jpg")
     center/cover no-repeat;
 }
 
